Fix register button's spacing

--- a/web/assets/css/partials/_landingPage.scss
+++ b/web/assets/css/partials/_landingPage.scss
@@ -40,6 +40,7 @@ main {
                 }
 
                 .button {
+                    display: inline-block;
                     margin-top: 40px;
                 }
             }
